# vigia-amazon

./: .env.example  .gitignore  DOCUMENTATION_CONSOLIDATION.md  IMPLEMENTATION_COMPLETE.md  PHASE_1_COMPLETE.md  README.md  TESTING.md  THINKING_VISUALIZATION.md  amplify.yml  package-lock.json  package.json
.kiro/: solana_lambda_migration.md
archive/: AMPLIFY_DEPLOYMENT.md  ARCHITECTURE.md  AWS_SETUP_GUIDE.md  BEDROCK_AGENT_FIX_REQUIRED.md  BEDROCK_AGENT_SETUP_COMPLETE.md  BEDROCK_AGENT_UPDATE_INSTRUCTIONS.md  BEDROCK_ROUTER_DEPLOYED.md  BOUNDING_BOX_COMPLETE.md  CHECKLIST.md  COMMIT_MESSAGE.txt  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FEATURES_GUIDE.md  FINAL_CHECKLIST.md  FINAL_SPRINT_PRIORITIES.md  HAZARD_VERIFICATION_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INNOVATION_README.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  INTEGRATION_TEST_REPORT.md  LEDGER_TICKER_DEPLOYMENT.md  LIVEMAP_SETUP.md  MAP_FILE_SYSTEM_ANALYSIS.md  MFS_IMPLEMENTATION_COMPLETE.md  ONNX_COMPLETE.md  ONNX_TESTING.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  QUICKREF.md  QUICKSTART.md  QUICK_START.md  SUMMARY.md  TASK_COMPLETION.md  (+29 more)
vigia_protocol/programs/vigia_protocol/: Cargo.toml
vigia_protocol/programs/vigia_protocol/src/: constants.rs  error.rs  lib.rs  state.rs
vigia_protocol/programs/vigia_protocol/src/instructions/: admin_stake_node.rs  initialize_hazard.rs  mod.rs  slash_node.rs  stake_node.rs  validate_hazard.rs
vigia_protocol/programs/vigia_protocol/tests/: test_initialize.rs
(+107 files in other folders)
