[package]
name = "vigia_protocol"
version = "0.1.0"
description = "VIGIA DePIN Road Intelligence Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vigia_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-account-compression = { version = "0.3.2", features = ["no-entrypoint"] }
spl-noop = "0.2.0"
solana-program = "=1.18.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
